--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import "https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@400;800&display=swap";
 @import "https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -7,6 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 :root {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -23,10 +25,10 @@ body {
   --hover-color: rgb(255, 199, 220);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
+// code {
+//   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+//     monospace;
+// }
 
 .emoji {
   font-size: 24px;
