Add hovering effect to button

--- a/src/components/ThoughtContent/ThoughtList.scss
+++ b/src/components/ThoughtContent/ThoughtList.scss
@@ -44,22 +44,6 @@
     font-family: "Roboto Mono", monospace;
     box-shadow: 7px 7px;
 
-    &:first-child .like-button {
-      background-image: radial-gradient(
-        circle at left,
-        rgba(255, 153, 102, 1) 0%,
-        rgb(242, 148, 190) 20%,
-        rgba(255, 102, 102, 1) 30%
-      );
-      background-size: 300% 50%;
-      animation: bounce 2s ease-in-out infinite;
-
-      .emoji {
-        animation: heartbeat 1.5s ease-in-out infinite;
-        transition: transform 0.2s ease-in-out;
-      }
-    }
-
     .info-wrapper {
       display: flex;
       justify-content: space-between;
@@ -85,11 +69,37 @@
       cursor: pointer;
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
       background-color: lightgrey;
-    }
 
+      &:hover {
+        background-color: var(--hover-color);
+      }
+
+      &.new-thought {
+        background-image: radial-gradient(
+          circle at left,
+          rgba(255, 153, 102, 1) 0%,
+          rgb(242, 148, 190) 20%,
+          rgba(255, 102, 102, 1) 30%
+        );
+        background-size: 300% 50%;
+        animation: bounce 2s ease-in-out infinite;
+
+        .emoji {
+          animation: heartbeat 1.5s ease-in-out infinite;
+          transition: transform 0.2s ease-in-out;
+        }
+      }
+    }
+    .num-likes {
+      margin-left: 5px;
+    }
+    .info-time {
+      color: gray;
+    }
     .num-likes,
     .info-time {
       opacity: 0.5;
+      font-size: initial;
     }
   }
 }
