--- a/src/App.scss
+++ b/src/App.scss
@@ -55,6 +55,9 @@ a {
   flex-direction: column;
   align-items: center;
   gap: 25px;
+  @media (min-width: 675px) {
+    width: 60%;
+  }
 
   h1 {
     font-family: Abril Fatface;
