--- a/src/components/ThoughtContent/ThoughtList.scss
+++ b/src/components/ThoughtContent/ThoughtList.scss
@@ -34,15 +34,20 @@
   flex-direction: column;
   align-items: center;
   gap: 25px;
+  @media (min-width: 675px) {
+    width: var(--main-width-desktop);
+  }
 
   .message {
     border: 1px solid black;
-    max-width: 400px;
     width: 100%;
     background-color: white;
     padding: 20px;
     font-family: "Roboto Mono", monospace;
     box-shadow: 7px 7px;
+    @media (min-width: 675px) {
+      width: 100%;
+    }
 
     .info-wrapper {
       display: flex;
@@ -72,6 +77,7 @@
 
       &:hover {
         background-color: var(--hover-color);
+        transform: scale(1.1);
       }
 
       &.new-thought {
